fixed spacing on top of events on events page

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -8,12 +8,10 @@ f// Place all the styles related to the Events controller here.
 }
 
 .events_index {
-  
- 
-  
   background-color: white;
   margin-left: 33%;
   margin-right: 0;
+  margin-top: 30px;
   outline: solid;
   outline-width: 1px;
   outline-color: #cdcdcd;
